--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-custom-scrollbars",
-  "version": "4.1.2",
+  "version": "4.1.3",
   "description": "React scrollbars component",
   "main": "lib/index.js",
   "scripts": {
@@ -61,9 +61,9 @@
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.6.0",
     "mocha": "^2.2.5",
-    "react": "^0.14.0 || ^15.0.0",
+    "react": "^16.0.0",
     "react-addons-test-utils": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "react-dom": "^16.0.0",
     "rimraf": "^2.3.4",
     "simulant": "^0.2.2",
     "webpack": "^1.9.6",
